@@ -17,7 +17,7 @@
 void opd_init_kernel_image(void);
 void opd_parse_kernel_range(char const * arg);
 void opd_clear_module_info(void);
-void opd_handle_kernel_sample(unsigned long eip, u32 counter);
-int opd_eip_is_kernel(unsigned long eip);
+void opd_handle_kernel_sample(vma_t eip, u32 counter);
+int opd_eip_is_kernel(vma_t eip);
 
 #endif /* OPD_KERNEL_H */
